Updated demo to run in container.

--- a/anwendertreffen-demo/inventory.yml
+++ b/anwendertreffen-demo/inventory.yml
@@ -4,6 +4,5 @@ all:
   children:
     web:
       hosts:
-        mkdocs1:
-          ansible_connection: docker
-          ansible_user: ansible
+        localhost:
+          ansible_connection: local
