--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,6 @@ repos:
       - id: end-of-file-fixer
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
-      - id: check-yaml
       - id: trailing-whitespace
       - id: detect-private-key
       - id: fix-encoding-pragma
@@ -26,3 +25,7 @@ repos:
     hooks:
       - id: check-github-actions
       - id: check-github-workflows
+  - repo: https://github.com/timgrt/pre-commit-hooks
+    rev: v0.2.0
+    hooks:
+      - id: check-vault-files
