--- a/anwendertreffen-demo/configuration.yml
+++ b/anwendertreffen-demo/configuration.yml
@@ -3,9 +3,6 @@
 - name: Create MkDocs deployment
   hosts: web
   become: true
-  vars:
-    mkdocs_project_git_url: https://github.com/TimGrt/Ansible-Best-Practices.git
-    mkdocs_project_destination_directory: "{{ ansible_user_dir }}/{{ mkdocs_project_git_url | basename | splitext | first }}"
   tasks:
     - name: Ensure Git is installed
       ansible.builtin.package:
@@ -33,6 +30,7 @@
       ansible.builtin.service:
         name: httpd
         state: started
+      notify: Open_Github_Issue
 
     - name: Trigger handler when redeployment is necessary
       ansible.builtin.meta: flush_handlers
