--- a/prepare-eda.yml
+++ b/prepare-eda.yml
@@ -2,6 +2,7 @@
 - name: Provision infrastructure
   hosts: localhost
   connection: local
+  gather_facts: false
   tasks:
     - name: Create container for EDA demo
       community.docker.docker_container:
