--- a/anwendertreffen-demo/awesome.yml
+++ b/anwendertreffen-demo/awesome.yml
@@ -9,3 +9,8 @@
           - ">>> WOHOO! <<<"
           - "We are at the 'Ansible Anwendertreffen'!"
           - "Also, it is Star Wars day, may the 4th be with you!!"
+    - name: Update logo for index.html
+      ansible.builtin.copy:
+        src: "{{ lookup('ansible.builtin.env', 'PWD') }}/files/StarWarsDay.png"
+        dest: /var/www/html/assets/images/computacenter.png
+        mode: "0644"
